--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -10,5 +10,7 @@
 
 <div class="example-wrapper">
    <h1>Bienvenu sous administration</h1>
+   <div> je suis Monsieur {{ app.user.email }} mon adresse est {{ app.user.adresse }}
+  
 </div>
 {% endblock %}
