--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,11 +11,12 @@
         <div class="container">
             {% block body %}  ZAPO M{% endblock %}
         </div>
-        <script
-                src="https://code.jquery.com/jquery-2.2.4.min.js"
+        
+        {% block javascripts %} {% endblock %}
+         <script src="https://code.jquery.com/jquery-2.2.4.min.js"
                 integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
                 crossorigin="anonymous"></script>
         <script src="{{ asset('js/search.js') }}"></script>
-        {% block javascripts %}{% endblock %}
+    </body>
     </body>
 </html>
